--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -44,9 +44,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/fragments"
         android:layout_width="411dp"
-        android:layout_height="337dp"
+        android:layout_height="380dp"
         android:layout_marginTop="264dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp" />
 
