--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#A58C42</color>
     <color name="colorAccent">#A58C42</color>
     <color name="colorGray">#E7E6EE</color>
+    <color name="colorBlanco">#FFFFFF</color>
 </resources>
