--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewnoContra"
         android:layout_width="256dp"
         android:layout_height="22dp"
         android:layout_marginStart="96dp"
@@ -90,7 +90,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewRegistro"
         android:layout_width="256dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="108dp"
