--- a/app/src/main/res/layout/content_registro.xml
+++ b/app/src/main/res/layout/content_registro.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".RegistroActivity"
+    tools:showIn="@layout/activity_registro"
     android:background="@color/colorGray"
-    app:layout_anchorGravity="bottom|center"
-    >
+    app:layout_anchorGravity="bottom|center">
 
     <android.support.v7.widget.CardView
         android:layout_width="255dp"
@@ -25,7 +26,9 @@
             android:hint="Nombre" />
 
     </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="255dp"
         android:layout_height="59dp"
         android:layout_marginStart="110dp"
@@ -41,6 +44,7 @@
             android:hint="Apellido" />
 
     </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.CardView
         android:layout_width="255dp"
         android:layout_height="59dp"
@@ -57,7 +61,9 @@
             android:hint="Telefono" />
 
     </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="255dp"
         android:layout_height="59dp"
         android:layout_marginStart="110dp"
@@ -169,13 +175,13 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="283dp"
-        android:layout_height="34dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="28dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="408dp"
         android:text="@string/Terminos"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
