--- a/app/src/main/res/layout/titulo_item_heredia.xml
+++ b/app/src/main/res/layout/titulo_item_heredia.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="?android:listPreferredItemPaddingLeft"
-    android:paddingLeft="45dp"
-    android:paddingStart="45dp"
     >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Item"
-        android:id="@+id/textViewTI"
-        android:textSize="14sp"
-        android:textColor="#f00"
-        tools:ignore="MissingConstraints" />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textViewTI"
+        android:layout_width="390dp"
+        android:layout_height="61dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#FFF"
+        android:drawableLeft="@drawable/add"
+        android:padding="10dp"
+        android:text="   Item                                                          $2000"
+        android:textColor="#000"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints" />
+</LinearLayout>
