--- a/app/src/main/res/layout/titulo_grupo_heredia.xml
+++ b/app/src/main/res/layout/titulo_grupo_heredia.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="?android:listPreferredItemPaddingLeft"
-    android:paddingLeft="45dp"
-    android:paddingStart="45dp">
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/textViewTG"
-        android:textColor="#f0f"
-        android:textSize="16sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#EBE8E8"
+        android:padding="10dp"
         android:text="Group"
-        tools:ignore="MissingConstraints" />
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="10dp" />
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
