--- a/app/src/main/res/menu/heredia.xml
+++ b/app/src/main/res/menu/heredia.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    
-    />
+
+   >
+    <item
+        android:id="@+id/mapH"
+        android:icon="@android:drawable/ic_dialog_map"
+        android:iconTint="@color/colorAccent"
+
+        android:title="map"
+        app:showAsAction="ifRoom">
+
+    </item>
+
+</menu>
+
